@@ -1,6 +1,7 @@
 2006-12-31  Robert Ancell  <bob27@users.sourceforge.net>
 	* Rephrased AI information dialog again...
 	* Added GConf schemas
+	* Use domain specified in defaults.py when loading Glade files
 
 2006-12-30  Robert Ancell  <bob27@users.sourceforge.net>
 	* Set main window title to 'Chess - game name'
